--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "mongoose": "^8.13.2"
     },
     "devDependencies": {
+        "@types/node": "^22.14.0",
         "nodemon": "^3.1.9"
     }
 }
